# rpcdds_conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
conan_pkg/: README.md  conanfile.py
conan_pkg/tmp/package/: conanmanifest.txt
conan_pkg/tmp/package/examples/C++/RTPSCalculator/: Calculator.h  Calculator.idl  CalculatorDDSAsyncSupport.cxx  CalculatorDDSProtocol.cxx  CalculatorProxy.cxx  CalculatorProxyImpl.h  CalculatorProxyImplExample.h  CalculatorServer.h  CalculatorServerExample.cxx  CalculatorTopics.cxx
conan_pkg/tmp/package/include/rpcdds/: config.h
conan_pkg/tmp/package/include/rpcdds/client/: Proxy.h
conan_pkg/tmp/package/include/rpcdds/server/: Server.h
conan_pkg/tmp/package/include/rpcdds/transports/dds/: RTPSProxyTransport.h
conan_pkg/tmp/package/include/rpcdds/transports/dds/components/: RTPSProxyProcedureEndpoint.h  RTPSServerProcedureEndpoint.h
conan_pkg/tmp/package/lib/: librpcdds-1.1.lib
conan_pkg/tmp/package/lib/cmake/rpcdds/: rpcdds-config-version.cmake  rpcdds-config.cmake  rpcdds-static-targets-release.cmake  rpcdds-static-targets.cmake
examples/: CMakeLists.txt
examples/C++/rpcdds/c++11Types/RTPSCalculator/: CMakeLists.txt  CalculatorClientExample.cxx  CalculatorDDSProtocol.h  CalculatorProtocol.h  CalculatorProxy.h  CalculatorProxyImplExample.cxx  CalculatorServer.cxx  CalculatorTopics.h
examples/C++/rpcdds/c++11Types/RTPSCalculatorAsync/: CMakeLists.txt
examples/C++/rpcdds/c++11Types/RTPSCalculator_/: CMakeLists.txt  Calculator.cxx  Calculator.h  Calculator.idl  CalculatorAsyncCallbackHandlers.h  CalculatorClientExample.cxx  CalculatorDDSAsyncSupport.cxx  CalculatorDDSAsyncSupport.h  CalculatorDDSProtocol.cxx  CalculatorDDSProtocol.h  CalculatorProtocol.h  CalculatorProxy.cxx  CalculatorProxy.h  CalculatorProxyImpl.h  CalculatorProxyImplExample.cxx  CalculatorProxyImplExample.h  CalculatorServer.cxx  CalculatorServer.h  CalculatorServerExample.cxx  CalculatorServerImpl.h  CalculatorServerImplExample.cxx  CalculatorServerImplExample.h  CalculatorTopics.cxx  CalculatorTopics.h  CalculatorTopicsPlugin.cxx  CalculatorTopicsPlugin.h  default_profiles.xml  local_profiles.xml
examples/ai_openapi/: AIOpenApi.cxx  AIOpenApi.h  AIOpenApi.idl  AIOpenApiAsyncCallbackHandlers.h  AIOpenApiClientExample.cxx  AIOpenApiDDSAsyncSupport.cxx  AIOpenApiDDSAsyncSupport.h  AIOpenApiDDSProtocol.cxx  AIOpenApiDDSProtocol.h  AIOpenApiProtocol.h  AIOpenApiProxy.cxx  AIOpenApiProxy.h  AIOpenApiProxyImpl.h  AIOpenApiProxyImplExample.cxx  AIOpenApiProxyImplExample.h  AIOpenApiServer.cxx  AIOpenApiServer.h  AIOpenApiServerExample.cxx  AIOpenApiServerImpl.h  AIOpenApiServerImplExample.cxx  AIOpenApiServerImplExample.h  AIOpenApiTopics.cxx  AIOpenApiTopics.h  AIOpenApiTopicsPlugin.cxx  AIOpenApiTopicsPlugin.h  CMakeLists.txt  idlgen.sh  makefile_x64Linux2.6gcc4.4.5
examples/ucar_api/: CMakeLists.txt  UCar.cxx  UCar.h  UCar.idl  UCarAsyncCallbackHandlers.h  UCarClientExample.cxx  UCarDDSAsyncSupport.cxx  UCarDDSAsyncSupport.h  UCarDDSProtocol.cxx  UCarDDSProtocol.h  UCarProtocol.h  UCarProxy.cxx  UCarProxy.h  UCarProxyImpl.h  UCarProxyImplExample.cxx  UCarProxyImplExample.h  UCarServer.cxx  UCarServer.h  UCarServerExample.cxx  UCarServerImpl.h  UCarServerImplExample.cxx  UCarServerImplExample.h  UCarTopics.cxx  UCarTopics.h  UCarTopicsPlugin.cxx  UCarTopicsPlugin.h  idlgen.sh
fastrpcgen/: build.gradle
fastrpcgen/gradle/wrapper/: gradle-wrapper.properties
fastrpcgen/share/fastrpc/fastrpcgen/: version
fastrpcgen/share/fastrpc/fastrpcgen/com/eprosima/fastcdr/idl/templates/: TypesHeader.stg
fastrpcgen/share/fastrpc/fastrpcgen/com/eprosima/fastrpc/idl/templates/: DDSProtocolSourceByInterface.stg  DDSProtocolSourceByOperation.stg  ProtocolHeader.stg  ProxyHeader.stg  ProxySource.stg  RTPSAsyncSupportHeaderByInterface.stg  RTPSAsyncSupportSourceByInterface.stg  RTPSProtocolHeaderByInterface.stg  RTPSProtocolSourceByInterface.stg  ServerImplHeader.stg  ServerImplSourceExample.stg  ServerSource.stg  TopicsHeaderByInterface.stg
fastrpcgen/src/com/eprosima/fastrpc/: fastrpcgen.java
fastrpcgen/src/com/eprosima/fastrpc/idl/templates/: AsyncCallbackHandlers.stg  ProxyImplHeader.stg  ProxyImplHeaderExample.stg  ProxyImplSourceExample.stg  RTPSClientExample.stg  RTPSProtocolSourceByOperation.stg  ServerHeader.stg  ServerImplHeaderExample.stg  TopicsSourceByInterface.stg
fastrpcgen/test/simple/: makefile_x64Linux2.6gcc4.4.5  ucar.cxx  ucar.h  ucar.idl  ucarAsyncCallbackHandlers.h  ucarClientExample.cxx  ucarDDSAsyncSupport.cxx  ucarDDSAsyncSupport.h  ucarDDSProtocol.cxx  ucarDDSProtocol.h  ucarProtocol.h  ucarProxy.cxx  ucarProxy.h  ucarProxyImpl.h  ucarProxyImplExample.cxx  ucarProxyImplExample.h  ucarServer.cxx  ucarServer.h  ucarServerExample.cxx  ucarServerImpl.h  ucarServerImplExample.cxx  ucarServerImplExample.h  ucarTopics.cxx  ucarTopics.h  ucarTopicsPlugin.cxx  ucarTopicsPlugin.h
include/: eProsima_auto_link.h
include/exceptions/: InitializeException.h
include/protocols/dds/: MessageHeader.h
include/transports/: ProxyTransport.h
include/transports/dds/: RTPSServerTransport.h  RTPSTransport.h
include/transports/dds/components/: RTPSProxyProcedureEndpoint.h
include/utils/dds/: Middleware.h
src/: CMakeLists.txt  fastrpc.aps
src/client/: Proxy.cpp
src/exceptions/: InitializeException.cpp
src/strategies/: ThreadPoolStrategy.cpp
src/transports/: HttpServerTransport.cpp  TCPServerTransport.cpp
src/transports/components/: TCPEndpoint.cpp
src/transports/dds/: RTPSProxyTransport.cpp  RTPSServerTransport.cpp
src/transports/dds/components/: RTPSProxyProcedureEndpoint.cpp  RTPSServerProcedureEndpoint.cpp  ServerProcedureEndpoint.cpp
src/utils/dds/: Middleware.cpp
test/blackbox/rpcdds_fastrtps/: CMakeLists.txt
utils/pcTests/rti/IncludesTest/: SameDirectory.idl
